# project-group8

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  SearchBridge.cpp  SearchBridge64.def  SearchGUI.pro  _fix.h  build.bat  extract_text.py  gui_main.cpp  gui_search_qt.py  search_wrapper.cpp  test_dll.cpp  test_qt.cpp
common/: common.h
include/: common.h  module1.h  module1_preprocess.h
src/: main.c
src/module1_preprocess/: preprocess.c
test_docs/: doc1.txt  mixed_test.txt
text_data/: doc1.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt  doc6.txt
第三部分/src/: QueryParse.cpp  QueryParse.h
第二部分/IndexBuild/: IndexBuild.cpp  IndexBuild.h
第五部分/: OutputBench.cpp  OutputBench.h  main.cpp
第四部分/: Rank.cpp  Rank.h
